# SongDetails

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  copy.ps1  mod.template.json  qpm.json  qpm.shared.json  run_protoc.ps1  vcpkg.json
.github/workflows/: build-ndk.yml  publish.yml
cmake/: quest.cmake
include/: SongProto.pb.h  SongProto.proto  StopWatch.hpp  Utils.hpp  logging.hpp
include/Data/: DataGetter.hpp  SongDetailsContainer.hpp
scripts/: copy.ps1  run_protoc.ps1
shared/: DiffArray.hpp  SongArray.hpp  SongDetails.hpp  _config.h
shared/Data/: MapCharacteristic.hpp  MapDifficulty.hpp  MapMods.hpp  RankedStates.hpp  RankedStatus.hpp  Song.hpp  SongDifficulty.hpp
src/: DiffArray.cpp  SongArray.cpp  SongDetails.cpp  SongProto.pb.cc  Utils.cpp  main.cpp
src/Data/: DataGetter.cpp  MapCharacteristic.cpp  Song.cpp  SongDetailsContainer.cpp  SongDifficulty.cpp
